--- a/grubhub/app/src/components/Menu/style.css
+++ b/grubhub/app/src/components/Menu/style.css
@@ -1,8 +1,20 @@
 .custom-card {
-    margin: 0 30px;
-    border: 1px double;
-    width: 200px;
-    height: 100px;
-    text-align: center;
-  }
-  
+  margin: 0 30px;
+  border: 1px double;
+  width: 200px;
+  height: 100px;
+  text-align: center;
+}
+
+.owner_menu {
+  max-width: unset;
+  margin: 0;
+  padding: 30px 0 !important;
+  padding-left: 330px !important;
+  padding-right: 30px !important;
+}
+
+.add-item {
+  margin-left: -1px;
+  padding: 20px;
+}
