--- a/grubhub/app/src/components/Order/style.css
+++ b/grubhub/app/src/components/Order/style.css
@@ -8,7 +8,7 @@
 }
 
 .order_detail_input {
-    width: 50%
+    width: 60%
 }
 
 .order_list {
@@ -17,4 +17,11 @@
   padding: 30px 0 !important;
   padding-left: 330px !important;
   padding-right: 150px !important;
+}
+
+.past_orders {
+  margin: 3px;
+  border: 1px solid lightgrey;
+  border-radius: 2px;
+  width: 40%
 }
